--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,10 @@
-== README
+== Basic Shopping List
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This app is a basic shopping list style app with lists than have many items.
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Things I learned while making this app:
+* Basic jQuery
+* Basic Ajax
+* Simple CSS selector styling
+* More about Rail's respond_with and respond_to
+* More about Rail's form_for, link_to, and button_to
